Add support for coverage extraction from .xccovarchive