@@ -13,11 +13,9 @@ import com.teamscale.upload.report.xcode.ActionsInvocationRecord;
 import com.teamscale.upload.report.xcode.Reference;
 import com.teamscale.upload.utils.FileSystemUtils;
 import com.teamscale.upload.utils.LogUtils;
-import org.apache.commons.io.FileUtils;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
@@ -31,7 +29,6 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 
 import static java.util.stream.Collectors.toList;
 
@@ -50,12 +47,6 @@ public class XCResultConverter {
      */
     private static final String TESTWISE_COVERAGE_REPORT_FORMAT = "TESTWISE_COVERAGE";
 
-
-    /**
-     * The maximum number of seconds to wait for a process or thread to terminate.
-     */
-    public static final int TIMEOUT_SECONDS = 120;
-
     /**
      * The number of conversion threads to run in parallel for faster conversion. By default, we use
      * the number of available processors to distribute work since this setting was most performant
@@ -68,7 +59,12 @@ public class XCResultConverter {
     /**
      * File extension used for converted XCResult bundles.
      */
-    public static final String CONVERTED_REPORT_FILE_EXTENSION = ".xccov";
+    public static final String XCCOV_REPORT_FILE_EXTENSION = ".xccov";
+
+    /**
+     * File extension used for converted XCResult bundles.
+     */
+    public static final String TESTWISE_COVERAGE_REPORT_FILE_EXTENSION = ".testwisecoverage.json";
 
     private final File workingDirectory;
 
@@ -80,22 +76,28 @@ public class XCResultConverter {
 
     /**
      * Converts the report and writes the conversion result to a file with the same path and the
-     * {@link #CONVERTED_REPORT_FILE_EXTENSION} as an added file extension.
+     * {@link #XCCOV_REPORT_FILE_EXTENSION} or {@link #TESTWISE_COVERAGE_REPORT_FILE_EXTENSION}
+     * as an added file extension.
      */
     public List<ConvertedReport> convert(File report) throws ConversionException {
         try {
             validateCommandLineTools();
 
             File reportDirectory = getReportDirectory(report);
-            ActionsInvocationRecord actionsInvocationRecord = getActionsInvocationRecord(reportDirectory);
             List<ConvertedReport> convertedReports = new ArrayList<>();
 
-            convertedReports.add(new ConvertedReport(TESTWISE_COVERAGE_REPORT_FORMAT,
-                    extractTestResults(report, reportDirectory, actionsInvocationRecord)));
+            if (isXccovArchive(reportDirectory)) {
+                convertedReports.add(extractCoverageData(report, reportDirectory));
+            } else {
+                ActionsInvocationRecord actionsInvocationRecord = getActionsInvocationRecord(reportDirectory);
+                convertedReports.add(extractTestResults(report, reportDirectory, actionsInvocationRecord));
 
-            if (actionsInvocationRecord.hasCoverageData()) {
-                convertedReports.add(new ConvertedReport(XCODE_REPORT_FORMAT,
-                        extractCoverageData(report, reportDirectory)));
+                if (actionsInvocationRecord.hasCoverageData()) {
+                    for (File convertToXccovArchive : convertToXccovArchives(reportDirectory,
+                            actionsInvocationRecord)) {
+                        convertedReports.add(extractCoverageData(report, convertToXccovArchive));
+                    }
+                }
             }
 
             return convertedReports;
@@ -103,20 +105,87 @@ public class XCResultConverter {
             LogUtils.warn(
                     String.format("Error while converting report %s: %s", report.getAbsolutePath(), e.getMessage()));
             return Collections.emptyList();
-        } catch (InterruptedException | ExecutionException | TimeoutException e) {
+        } catch (InterruptedException | ExecutionException e) {
             throw new ConversionException(
                     String.format("Error while converting report %s: %s", report.getAbsolutePath(), e.getMessage()), e);
         }
     }
 
+    private List<File> convertToXccovArchives(File reportDirectory, ActionsInvocationRecord actionsInvocationRecord)
+            throws IOException, InterruptedException {
+        List<File> xccovArchives = new ArrayList<>(actionsInvocationRecord.actions.length);
+
+        for (int i = 0; i < actionsInvocationRecord.actions.length; i++) {
+            ActionRecord action = actionsInvocationRecord.actions[i];
+            File xccovArchive = new File(reportDirectory.getAbsolutePath() + "." + i + ".xccovarchive");
+            String archiveRef = action.actionResult.coverage.archiveRef.id;
+
+            FileSystemUtils.mkdirs(xccovArchive.getParentFile());
+            ProcessUtils.executeProcess("xcrun", "xcresulttool", "export", "--type", "directory", "--path",
+                    reportDirectory.getAbsolutePath(), "--id", archiveRef, "--output-path",
+                    xccovArchive.getAbsolutePath());
+
+            xccovArchives.add(xccovArchive);
+        }
+
+        return xccovArchives;
+    }
+
+    /**
+     * Returns true if the file is a regular XCResult bundle directory indicated by the ".xcresult"
+     * ending in the directory name.
+     */
+    private static boolean isXcresultBundle(File file) {
+        return file.isDirectory() && file.getName().endsWith(".xcresult");
+    }
+
+    /**
+     * Returns true if the file is an xccov archive which is more compact than a regular XCResult bundle.
+     * An xccov archive can only be generated by XCode internal tooling but provides much better performance
+     * when extracting coverage. Note that xccov archives don't contain test results.
+     */
+    private static boolean isXccovArchive(File file) {
+        return file.isDirectory() && file.getName().endsWith(".xccovarchive");
+    }
+
+    /**
+     * Returns true if XCode report requires conversion.
+     */
+    public static boolean needsConversion(File report) {
+        return FileSystemUtils.isTarFile(report) || isXcresultBundle(report) || isXccovArchive(report);
+    }
+
+    /**
+     * Returns the bundle directory for the report. In case the report is a Tar archive the archive is
+     * extracted to a temporary bundle directory that is returned.
+     */
+    private File getReportDirectory(File report) throws IOException, ConversionException {
+        File reportDirectory = report;
+        String reportDirectoryName = FileSystemUtils.stripTarExtension(report.getName());
+
+        if (FileSystemUtils.isTarFile(report)) {
+            reportDirectory = new File(workingDirectory, reportDirectoryName);
+            FileSystemUtils.extractTarArchive(report, reportDirectory);
+        }
+        if (isXccovArchive(reportDirectory) || isXcresultBundle(reportDirectory)) {
+            return reportDirectory;
+        }
+
+        throw new ConversionException(
+                "Report location must be an existing directory with a name that ends with '.xcresult' or " +
+                        "'.xccovarchive'. The directory may be contained in a tar archive indicated by the file " +
+                        "extensions '.tar', '.tar.gz' or '.tgz'."
+                        + report);
+    }
+
     private ActionsInvocationRecord getActionsInvocationRecord(File reportDirectory)
             throws IOException, InterruptedException {
-        String actionsInvocationRecordJson = ProcessUtils.executeProcessAndGetOutput(TIMEOUT_SECONDS,
+        String actionsInvocationRecordJson = ProcessUtils.executeProcess(
                 "xcrun", "xcresulttool", "get", "--path", reportDirectory.getAbsolutePath(), "--format", "json");
         return new Gson().fromJson(actionsInvocationRecordJson, ActionsInvocationRecord.class);
     }
 
-    private File extractTestResults(File report, File reportDirectory, ActionsInvocationRecord actionsInvocationRecord)
+    private ConvertedReport extractTestResults(File report, File reportDirectory, ActionsInvocationRecord actionsInvocationRecord)
             throws IOException, InterruptedException {
         List<TestInfo> tests = new ArrayList<>();
 
@@ -126,9 +195,8 @@ public class XCResultConverter {
                 continue;
             }
 
-            String json = ProcessUtils
-                    .executeProcessAndGetOutput(TIMEOUT_SECONDS, "xcrun", "xcresulttool", "get", "--path",
-                            reportDirectory.getAbsolutePath(), "--format", "json", "--id", testsRef.id);
+            String json = ProcessUtils.executeProcess("xcrun", "xcresulttool", "get", "--path",
+                    reportDirectory.getAbsolutePath(), "--format", "json", "--id", testsRef.id);
             ActionTestPlanRunSummaries actionTestPlanRunSummaries =
                     new Gson().fromJson(json, ActionTestPlanRunSummaries.class);
 
@@ -141,14 +209,15 @@ public class XCResultConverter {
             }
         }
 
-        File testwiseCoverageReportFile = new File(report.getAbsolutePath() + ".testwisecoverage.json");
+        File testwiseCoverageReportFile = new File(report.getAbsolutePath() + TESTWISE_COVERAGE_REPORT_FILE_EXTENSION);
 
         tests.sort(Comparator.comparing(testInfo -> testInfo.uniformPath));
         TestwiseCoverageReport testwiseCoverageReport = new TestwiseCoverageReport(tests);
 
-        FileUtils.write(testwiseCoverageReportFile, new Gson().toJson(testwiseCoverageReport), StandardCharsets.UTF_8);
+        FileSystemUtils.ensureEmptyFile(testwiseCoverageReportFile);
+        Files.writeString(testwiseCoverageReportFile.toPath(), new Gson().toJson(testwiseCoverageReport));
 
-        return testwiseCoverageReportFile;
+        return new ConvertedReport(TESTWISE_COVERAGE_REPORT_FORMAT, testwiseCoverageReportFile);
     }
 
     private void extractTests(ActionTest actionTest, List<TestInfo> tests) {
@@ -162,21 +231,27 @@ public class XCResultConverter {
         }
     }
 
-    private File extractCoverageData(File report, File reportDirectory)
-            throws IOException, InterruptedException, ExecutionException, TimeoutException {
+    private ConvertedReport extractCoverageData(File report, File reportDirectory)
+            throws IOException, InterruptedException, ExecutionException {
         List<String> sourceFiles = getSourceFiles(reportDirectory);
 
         LogUtils.info(
-                String.format("Converting %d source files using %d threads in XCResult bundle %s.", sourceFiles.size(),
+                String.format("Extracting coverage for %d source files using %d threads from XCResult bundle %s.",
+                        sourceFiles.size(),
                         CONVERSION_THREAD_COUNT, report.getAbsolutePath()));
 
+        long startTime = System.currentTimeMillis();
+
         Queue<Future<ConversionResult>> conversionResults = submitConversionTasks(reportDirectory, sourceFiles);
-        File convertedCoverageReport = new File(report.getAbsolutePath() + CONVERTED_REPORT_FILE_EXTENSION);
+        File convertedCoverageReport = new File(report.getAbsolutePath() + XCCOV_REPORT_FILE_EXTENSION);
 
         writeConversionResults(conversionResults, convertedCoverageReport);
         waitForRunningProcessesToFinish();
 
-        return convertedCoverageReport;
+        LogUtils.info(String.format("Coverage extraction finished after %d seconds.",
+                (System.currentTimeMillis() - startTime) / 1000));
+
+        return new ConvertedReport(XCODE_REPORT_FORMAT, convertedCoverageReport);
     }
 
     private Queue<Future<ConversionResult>> submitConversionTasks(File reportDirectory, List<String> sourceFiles) {
@@ -194,7 +269,7 @@ public class XCResultConverter {
 
     private void waitForRunningProcessesToFinish() throws InterruptedException {
         if (executorService != null && !executorService.isTerminated()) {
-            if (!executorService.awaitTermination(TIMEOUT_SECONDS, TimeUnit.SECONDS)) {
+            if (!executorService.awaitTermination(60, TimeUnit.SECONDS)) {
                 LogUtils.warn("Processes took too long to terminate. Forcing shutdown.");
                 executorService.shutdownNow();
             }
@@ -213,48 +288,15 @@ public class XCResultConverter {
         }
     }
 
-
-    /**
-     * Returns the XCResult bundle directory for the report. In case the report is a Tar archive the archive is
-     * extracted to a temporary XCResult bundle directory that is returned.
-     */
-    private File getReportDirectory(File report) throws IOException, ConversionException {
-        String reportFileName = report.getName();
-
-        if (report.isDirectory() && reportFileName.endsWith(".xcresult")) {
-            return report;
-        }
-        if (report.isFile() &&
-                (reportFileName.endsWith(".xcresult.tar") || reportFileName.endsWith(".xcresult.tar.gz")) ||
-                reportFileName.endsWith(".xcresult.tgz")) {
-            String reportDirectoryName = reportFileName + "_extracted.xcresult";
-            File temporaryReportDirectory = new File(workingDirectory, reportDirectoryName);
-
-            FileSystemUtils.extractTarArchive(report, temporaryReportDirectory);
-
-            return temporaryReportDirectory;
-        }
-
-        throw new ConversionException(
-                "Report location must be an existing directory with a name that ends with '.xcresult' or a file " +
-                        "that ends with '.xcresult.tar', '.xcresult.tar.gz' or '.xcresult.tgz': "
-                        + report.getAbsolutePath());
-    }
-
     /**
      * Empties the queue to free memory and writes the {@link ConversionResult} to the converted report file.
      */
     private static void writeConversionResults(Queue<Future<ConversionResult>> conversionResults, File convertedReport)
-            throws InterruptedException, ExecutionException, TimeoutException, IOException {
-        ConversionProgressTracker conversionProgressTracker =
-                new ConversionProgressTracker(System.currentTimeMillis(), conversionResults.size());
-
-        if (convertedReport.exists() && !convertedReport.delete()) {
-            LogUtils.fail("Unable to delete existing converted report: " + convertedReport);
-        }
+            throws InterruptedException, ExecutionException, IOException {
+        FileSystemUtils.ensureEmptyFile(convertedReport);
 
         while (!conversionResults.isEmpty()) {
-            ConversionResult conversionResult = conversionResults.remove().get(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+            ConversionResult conversionResult = conversionResults.remove().get();
             if (conversionResult == null) {
                 // Can happen when the application is forcefully quit or a timeout occurs
                 continue;
@@ -262,12 +304,8 @@ public class XCResultConverter {
 
             String sourceFileHeader = conversionResult.sourceFile + System.lineSeparator();
 
-            Files.writeString(convertedReport.toPath(), sourceFileHeader, StandardOpenOption.APPEND,
-                    StandardOpenOption.CREATE);
-            Files.write(convertedReport.toPath(), conversionResult.result, StandardOpenOption.APPEND,
-                    StandardOpenOption.CREATE);
-
-            conversionProgressTracker.reportProgress();
+            Files.writeString(convertedReport.toPath(), sourceFileHeader, StandardOpenOption.APPEND);
+            Files.writeString(convertedReport.toPath(), conversionResult.result, StandardOpenOption.APPEND);
         }
     }
 
@@ -275,13 +313,13 @@ public class XCResultConverter {
      * Returns a sorted list of source files contained in the XCResult bundle directory.
      */
     private static List<String> getSourceFiles(File reportDirectory) throws IOException, InterruptedException {
-        String output = ProcessUtils.executeProcessAndGetOutput(TIMEOUT_SECONDS,
+        String output = ProcessUtils.executeProcess(
                 "xcrun", "xccov", "view", "--archive", "--file-list", reportDirectory.getAbsolutePath());
         return output.lines().sorted().collect(toList());
     }
 
     private static void validateCommandLineTools() throws IOException, InterruptedException, ConversionException {
-        if (ProcessUtils.executeProcess("xcrun", "--version").waitFor() != 0) {
+        if (ProcessUtils.startProcess("xcrun", "--version").waitFor() != 0) {
             throw new ConversionException(
                     "XCode command line tools not installed. Install command line tools on MacOS by installing XCode " +
                             "from the store and running 'xcode-select --install'.");
@@ -301,5 +339,4 @@ public class XCResultConverter {
             super(message, e);
         }
     }
-
 }
